--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "GTA Shelter System - Population in Crisis"
 author: "Voices 4 Unhoused Liberation"
-date: "2024-04-07"
+date: "2024-04-10"
 output: html_document
 ---
 
@@ -224,7 +224,7 @@ The chronic lack of safe and affordable housing, along with the growing economic
 knitr::opts_chunk$set(collapse = TRUE)
 
 ### Libraries (R packages used in data analysis)
-pacman::p_load(pacman, fs, tidyverse, skimr, janitor, kableExtra, dplyr, purrr, rio, here, tidyverse, dplyr, ggplot2, ggpubr, stringr, flexdashboard, flextable, DT, shiny, plotly, ggExtra, cowplot, patchwork, forcats, naniar, DescTools, lubridate)
+pacman::p_load(pacman, fs, tidyverse, skimr, janitor, kableExtra, dplyr, purrr, rio, here, tidyverse, dplyr, ggplot2, ggpubr, stringr, DT, shiny, plotly, ggExtra, cowplot, patchwork, forcats, naniar, DescTools, lubridate)
 
 ```
 
@@ -295,7 +295,7 @@ CIC1plot
 ```
 
 </div>
-**Figure 1. Toronto Central Intake Daily Call Totals.** The plotted data, which was taken from the "*Central Intake Call Wrap-Up Codes*" dataset, provides daily counts of calls answered by **Central Intake Centre** (**CIC**). The calls are classified by a caseworker using 13 distinct "*wrap-up*" codes (i.e. describes general nature of the call). These daily **SMIS** records are manually updated on a monthly basis. Although the "*wrap-up*" codes provide information related to the volume and type of calls received, it does not track requests made by unique individuals, nor the ultimate outcomes of referrals.**<sup>4</sup>** Looking at the plotted data it is evident that there has been an overall increase in the number of calls to **CIC**. Overall, few callers were able to successfully obtain a referral for an overnight sleeping or resting space (colour coded). This low success rate has been particularly pronounced within the last 10 months.
+**Figure 1. Toronto Central Intake Daily Call Totals.** The plotted data, which was taken from the "*Central Intake Call Wrap-Up Codes*" dataset, provides daily counts of calls answered by **Central Intake Centre** (**CIC**). The calls are classified by a caseworker using 13 distinct "*wrap-up*" codes (i.e. describes general nature of the call). These daily **SMIS** records are manually updated on a monthly basis. Although the "*wrap-up*" codes provide information related to the volume and type of calls received, it does not track requests made by unique individuals, nor the ultimate outcomes of referrals.**<sup>4</sup>** Looking at the plotted data it is evident that there has been an overall increase in the number of calls to **CIC**. Unfortunately it appears that few callers were able to successfully obtain a referral for an overnight sleeping or resting space (colour coded). This low success rate has been particularly pronounced within the last 10 months.
 
 <br>
 <br>
@@ -454,7 +454,7 @@ plotDemodf3
 
 ```
 </div>
-**Figure 3. Toronto Shelter System Flow Data Total Numbers.** This plot shows the total number of actively homeless people according to **SMIS** records. This only pertains to those people who have used overnight services that use **SMIS** (i.e. excludes people who sleep outdoors or who use non-**SMIS** homeless services). The changing width of the plotted line reflects the changing dynamics of the homeless population over a 6 year period. Clearly the number of homeless people within the **GTA** is at an all time high and continues to trend upwards. The delayed nature of the collected data (i.e. published on the 15<sup>th</sup> day of every month) means that the next update (i.e. 2024-04-15) will include records for the period ending on March 15<sup>th</sup>. Currently there are 11,173 "actively" homeless people that have been recorded via **SMIS**. Although far from complete, this report does appear (for some unknown reason) to be more extensive than the **DSOSO** records, since the latter reports only 9,946 homeless people for the same reporting period (Feb 15<sup>th</sup> 2024). This discrepancy in the number of reported homeless people is a bit disconcerting given that both datasets are based on the **SMIS** records.
+**Figure 3. Toronto Shelter System Flow Data Total Numbers.** This plot shows the total number of "*actively*" homeless people according to **SMIS** records. This only pertains to those people who have used overnight services that use **SMIS** (i.e. excludes people who sleep outdoors or who use non-**SMIS** homeless services). The changing width of the plotted line reflects the changing dynamics of the homeless population over a 6 year period. Clearly the number of homeless people within the **GTA** is at an all time high and continues to trend upwards. The delayed nature of the collected data (i.e. published on the 15<sup>th</sup> day of every month) means that the next update (i.e. 2024-04-15) will include the records for March. Currently there are 11,173 "actively" homeless people that have been recorded via **SMIS**. Although far from complete, this report does appear (for some unknown reason) to be more extensive than the **DSOSO** records, since the latter reports only 9,946 homeless people for the same reporting period (Feb 15<sup>th</sup> 2024). This discrepancy in the number of reported homeless people is a bit disconcerting given that both datasets are based on the **SMIS** records.
 
 <br>
 
@@ -518,7 +518,7 @@ DemoPlot4
 ```
 
 </div>
-**Figure 4. Demographics of TSSF dataset.** The above plot shows the number of actively homeless people classified as either **(i)** Chronically homeless, **(ii)** a member of a homeless Family, **(iii)** Indigenous, **(iv)** a non-refugee, **(v)** a refugee, **(vi)** a single adult (> 24 yrs), or a **(vii)** Youth (16-24 yrs) who is not a member of an homeless family. Like **Figure 3**, the changing width of the plotted line reflects the changing dynamics of each homeless group. Currently (Feb 2024) the largest homeless demographic group is single adults (Note: 7579 single adults, or 67.8%, compare to 2538 family members, or 22.7%, and 1056 youths, or 9.5%), who make up ~77% (4590/5940) of the chronic homeless population. The population of homeless refugees (5768, or 51.6%) slightly out numbers the non-refugee homeless population (5405, or 49.4%). Nevertheless both refugee and non-refugee populations have been trending upwards since December 2023.
+**Figure 4. Demographics of TSSF dataset.** The above plot shows the number of "*actively*" homeless people classified as either **(i)** Chronically homeless, **(ii)** a member of a homeless Family, **(iii)** Indigenous, **(iv)** a non-refugee, **(v)** a refugee, **(vi)** a single adult (> 24 yrs), or a **(vii)** Youth (16-24 yrs) who is not a member of an homeless family. Like **Figure 3**, the changing width of the plotted line reflects the changing dynamics of each homeless group. Currently (Feb 2024) the largest homeless demographic group is single adults (Note: 7579 single adults, or 67.8%, compare to 2538 family members, or 22.7%, and 1056 youths, or 9.5%), who make up ~77% (4590/5940) of the chronic homeless population. The population of homeless refugees (5768, or 51.6%) slightly out numbers the non-refugee homeless population (5405, or 49.4%). Nevertheless both refugee and non-refugee populations have been trending upwards since December 2023.
 
 <br>
 <br>
@@ -593,7 +593,7 @@ DemoPlot5
 
 ```{r include=FALSE}
 ### Import data file
-DSOSOdt <- import(here("Datasets", "DSOSO20240329.csv"))
+DSOSOdt <- import(here("Datasets", "DSOSO_2021to10Apr2024.csv"))
 
 ### Change **class** of column values from *numeric* to *character* 
 ### Namely: ORG_ID, SHELTER_ID, LOCATION_ID, PROGRAM_ID
@@ -778,7 +778,7 @@ rm(df1, df2, df2.NA)
 
 <div align=center>
 ## Figure 5: GTA Shelter Population (DSOSO)
-### (Period: 2021/01/01 - 2024/03/29)
+### (Period: 2021/01/01 - 2024/04/10)
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=5, fig.align='center'}
 ### ***********************************************************
@@ -814,7 +814,7 @@ plotResSumly
 ```
 
 </div>
-**Figure 5. Total Shelter Population within the Greater Toronto Area (GTA).** The above plot shows the total number of daily shelter users for the period spanning 2021-01-01 to 2024-03-29. The number of shelter occupants have increased by more than 60% during this time.
+**Figure 5. Total Shelter Population within the Greater Toronto Area (GTA).** The above plot shows the total number of daily shelter users for the period spanning 2021-01-01 to 2024-04-10. The number of shelter occupants have increased by more than 60% during this time.
 
 <br>
 <br>
@@ -858,14 +858,14 @@ plotCTly
 ```
 
 </div>
-**Figure 6. Shelter Population per GTA region.** The plot shows the total number of shelter users within different parts of the **GTA** (i.e. Toronto, North York, Etobicoke, Scarborough, Vaughan) for the past 39 months (2021-01-01 to 2024-03-29). The data reveals that the vast majority of shelter users are currently being housed within Toronto and North York (see Bar graph in **Figure 7**).
+**Figure 6. Shelter Population per GTA region.** The plot shows the total number of shelter users within different parts of the **GTA** (i.e. Toronto, North York, Etobicoke, Scarborough, Vaughan) for the past 39 months (2021-01-01 to 2024-04-10). The data reveals that the vast majority of shelter users are currently being housed within Toronto and North York (see Bar graph in **Figure 7**).
 
 <br>
 <br>
 
 <div align=center>
 ## Figure 7: GTA Shelter Population (DSOSO)
-### (Regional Numbers: 2024-03-29)
+### (Regional Numbers: 2024-04-10)
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE,}
 ### *********************************************************
@@ -874,10 +874,13 @@ plotCTly
 
 ### Use "group by" and "sum" functions to sum up observations
 ### Total Population per "CITY"
-df240329 <- subset(df3.NA, OCCUPANCY_DATE == "2024-03-29")
+df240329 <- subset(df3.NA, OCCUPANCY_DATE == "2024-04-10")
 CityTots <- df240329 %>%
   group_by(OCCUPANCY_DATE, CITY) %>%
   summarise(n_observ = n(), sum_Users = sum(SERVICE_USER_COUNT))
+
+### add new column for calculated percentages
+CityTotsSum <- CityTots %>% mutate(prop = 100*(sum_Users/sum(sum_Users)))
 
 ### Bar Graph (2024/03/29) = 9704 Shelter population, 136 Program IDs 
 plotCityTots <- ggplot(CityTots) +
@@ -899,7 +902,7 @@ plotCityTotsly
 ```
 
 </div>
-**Figure 7. Current Shelter Populations per GTA Region.** This bar graph shows the current (2024-03-29) number of shelter occupants within each of the designated **GTA** regions. Toronto (68.12%) and North York (18.69%) shelter the majority of homeless people, while Scarborough (8.58%), Etobicoke (4%), and Vaughan (0.61%) collectively house less than 14% of the homeless population.  
+**Figure 7. Current Shelter Populations per GTA Region.** This bar graph shows the current (2024-04-10) number of shelter occupants within each of the designated **GTA** regions. Toronto (67.5%) and North York (18.9%) shelter the majority of homeless people, while Scarborough (8.9%), Etobicoke (4.1%), and Vaughan (0.6%) collectively house less than 14% of the homeless population.  
 
 <br>
 <br>
@@ -1046,7 +1049,7 @@ plotSTtotalsly
 ```
 
 </div>
-**Figure 10. Homeless Overnight Service Types within the GTA.** Homeless individuals within the **GTA** can access different types of overnight services, inclduing: **(i) Shelters**, **(ii) 24-Hour Respites**, **(iii) Motels/Hotels**, **(iv) Interim Housing**, **(v) Warming Centres**, **(vi) 24-Hour Women’s Drop-ins**, and **(vii) Isolation/Recovery Sites**. There are a few other **Service Types** offered, but they are ill-defined and accessed by very few people. As of March 29<sup>th</sup> 2024 the vast majority of **Service Types** are emergency **Shelters** (4867 of 9704, or 50.15%) and **Motel/Hotel** (4062 of 9704, or 41.86%) services. Unfortunately, programs that ultimately lead to <u>permanent</u> housing are virtually non-existent.
+**Figure 10. Homeless Overnight Service Types within the GTA.** Homeless individuals within the **GTA** can access different types of overnight services, inclduing: **(i) Shelters**, **(ii) 24-Hour Respites**, **(iii) Motels/Hotels**, **(iv) Interim Housing**, **(v) Warming Centres**, **(vi) 24-Hour Women’s Drop-ins**, and **(vii) Isolation/Recovery Sites**. There are a few other **Service Types** offered, but they are ill-defined and accessed by very few people. As of March 29<sup>th</sup> 2024 the vast majority of **Service Types** are emergency **Shelters** (4815 of 9587, or 50.2%) and **Motel/Hotel** (4093 of 9587, or 42.7%) services. Unfortunately, programs that ultimately lead to <u>permanent</u> housing are virtually non-existent.
 
 <br>
 <br>
@@ -1100,8 +1103,8 @@ plotdf3NAPAly
 <br>
 
 <div align=center>
-## Figure 12: Homes First Delta Hotel Shelter (DSOSO)
-### (Occupancy Numbers)
+## Figure 12: Homes First - Mixed Adult Delta Hotel Shelter
+### (DSOSO: # Occupants)
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, out.width='90%', fig.align='center'}
 ### *****************************************************************
@@ -1139,7 +1142,7 @@ plot4 <- ggplot(data = df3NAPID16011,     # data set
   geom_point(color = "darkblue", size = 2, alpha = 0.2)+
   labs(x = "Occupancy Date",
        y = "# Rooms Unavailable",
-       title = "Figure 9: Homes First run Delta Hotel Shelter",
+       title = "Figure 9: Homes First Mixed Adult Delta Hotel Shelter",
        subtitle = "(Unavailable Room Counts)",
        caption = stringr::str_glue("Current: {max(df3NAPID16011$OCCUPANCY_DATE, na.rm=T)}")) +
   theme_bw()
@@ -1175,36 +1178,35 @@ plot3bm
 
 ```
 
-
 ```{r eval=FALSE, include=FALSE, echo=FALSE}
 ##################################################
 ##################################################
 ### DATA FOR ==> ***LOESS MODEL***
 ##################################################
 ##################################################
-data1 <- df3NAPID16011 %>% filter(OCCUPANCY_DATE >= "2024-01-04" & OCCUPANCY_DATE <= "2024-03-29")
+LOESS1 <- df3NAPID16011 %>% filter(OCCUPANCY_DATE >= "2024-01-04" & OCCUPANCY_DATE <= "2024-04-7")
 
-data2 <- data1 %>% select(OCCUPANCY_DATE, Room_Capacity_Funding, Rooms_Occupied, Rooms_Unavailable)
+LOESS2 <- LOESS1 %>% select(OCCUPANCY_DATE, Room_Capacity_Funding, Rooms_Occupied, Rooms_Unavailable)
 
-df <- na.omit(data2)
+LOESSdf <- na.omit(LOESS2)
 
 ### Convert all character variables to factor variables
 library(dplyr)
-df %>% mutate_if(is.character, as.factor)
+LOESSdf %>% mutate_if(is.character, as.factor)
 
 ### Fit a ***LOESS MODEL***
-loess_model <- loess(Rooms_Unavailable ~ as.numeric(OCCUPANCY_DATE), data = df, span = 0.5, degree = 1)
+loess_model <- loess(Rooms_Unavailable ~ as.numeric(OCCUPANCY_DATE), data = LOESSdf, span = 0.5, degree = 1)
 
 # Fit higher order polynomial LOESS model
-loess_model2 <- loess(Rooms_Unavailable ~ as.numeric(OCCUPANCY_DATE), data = df, span = 0.5, degree = 2)
+loess_model2 <- loess(Rooms_Unavailable ~ as.numeric(OCCUPANCY_DATE), data = LOESSdf, span = 0.5, degree = 2)
 
 # Generate predictions from the LOESS model
-predictions <- predict(loess_model, newdata = df)
-predictions <- cbind(df, predictions)
+predictions <- predict(loess_model, newdata = LOESSdf)
+predictions <- cbind(LOESSdf, predictions)
 predictions <- predictions[order(predictions$Rooms_Unavailable), ]
 
-predictions2 <- predict(loess_model2, newdata = df)
-predictions2 <- cbind(df, predictions2)
+predictions2 <- predict(loess_model2, newdata = LOESSdf)
+predictions2 <- cbind(LOESSdf, predictions2)
 predictions2 <- predictions2[order(predictions2$Rooms_Unavailable), ]
 
 # Create a scatter plot of the original data
@@ -1218,29 +1220,29 @@ lines(predictions$OCCUPANCY_DATE,
       predictions$predictions,
       col = "darkred", lwd = 1)
 
-ggplot(df, aes(x = OCCUPANCY_DATE, y = Rooms_Unavailable)) +
+LOESSplot1 <- ggplot(LOESSdf, aes(x = OCCUPANCY_DATE, y = Rooms_Unavailable)) +
   geom_point() +
   stat_smooth(method = "loess", se = FALSE, span = 0.5,
               method.args = list(degree = 1) )
 
-ggplot(df, aes(x = OCCUPANCY_DATE, y = Rooms_Unavailable)) +
+LOESSplot2 <- ggplot(LOESSdf, aes(x = OCCUPANCY_DATE, y = Rooms_Unavailable)) +
   geom_point() +
   stat_smooth(method = "loess", se = FALSE, span = 0.5,
               method.args = list(degree = 2) )
 
-df$residuals <- residuals(loess_model)
-df$residuals2 <- residuals(loess_model2)
+LOESSdf$residuals <- residuals(loess_model)
+LOESSdf$residuals2 <- residuals(loess_model2)
 
-ggplot(df, aes(x = OCCUPANCY_DATE, y = residuals)) +
+LOESSplot3 <- ggplot(LOESSdf, aes(x = OCCUPANCY_DATE, y = residuals)) +
   geom_point() +
   stat_smooth(method = "loess", se = FALSE, span = 0.5,
               method.args = list(degree = 1) )
 
-ggplot(df, aes(sample = residuals)) + 
+LOESSplot4 <- ggplot(LOESSdf, aes(sample = residuals)) + 
   stat_qq(distribution = qnorm) +
   stat_qq_line(distribution = qnorm, col = "blue")
 
-ggplot(df, aes(sample = residuals2)) + 
+LOESSplot5 <- ggplot(LOESSdf, aes(sample = residuals2)) + 
   stat_qq(distribution = qnorm) +
   stat_qq_line(distribution = qnorm, col = "blue")
 
@@ -1251,15 +1253,15 @@ ggplot(df, aes(sample = residuals2)) +
 <br>
 
 <div align=center>
-## Figure 13: Homes First Delta Hotel Shelter (DSOSO)
-### (# Unavailable Rooms)
+## Figure 13: Homes First - Mixed Adult Delta Hotel Shelter
+### (DSOSO: # Unavailable Rooms)
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE, fig.height=5, out.width='100%', fig.align='center'}
 ### *******************************************************************
 ### ** GRAPH 13 - TOTAL #s for PID16011 (2035 Kennedy Rd) 2024-03-29 **
 ### *******************************************************************
 plot16011 <- df3NAPID16011 %>%
-  filter(OCCUPANCY_DATE >= "2024-01-04" & OCCUPANCY_DATE <= "2024-03-29") %>%
+  filter(OCCUPANCY_DATE >= "2024-01-04" & OCCUPANCY_DATE <= "2024-04-10") %>%
   ggplot() +
   aes(x = OCCUPANCY_DATE,
       y = Rooms_Unavailable,
@@ -1285,8 +1287,9 @@ plot2035Kenly
 ```
 
 </div>
-**Figure 12 & 13. Homes First's Delta Hotel Shelter.** The two graphs above show the number of rooms at the Delta Homeless Shelter that are either occupied (**Figure 12**) or unoccupied (**Figure 13**) by a person. The marginal histogram in **Figure 12** shows that the plotted occupancy values fall within 2 distinct populations. These two populations of data points begin to emerge on July 22<sup>nd</sup> 2022 (i.e. July 21<sup>st</sup> = 316 residents, July 22<sup>nd</sup> = 334 residents). The reasons for this are currently unknown, but may reflect <u>increased</u> funding to the Shelter System. Current data trends suggest that a smaller Delta resident population, similar to the one that existed prior to July 22<sup>nd</sup> 2022, will likely re-emerge. The increasing number of unavailable rooms at the Delta Homeless Shelter over the past month (**Figure 13**) shows the rapidly changing dynamics of the Delta Shelter population. The **loess** (**LO**cal regr**ESS**ion) fitted "*smoothed*" curve is a common non-parametric modelling tool used to fit a curve to a set of data points. The **Loess** model is "well defined" (i.e. residuals are constant over the range of x values) suggesting a "*real*" pattern or tend emerging from the data (i.e. increased rate of unavailable rooms). It is also important to note that the overnight **Delta Hotel Shelter** (Program ID 16011) supervised by **Homes First** is only one of 9 shelters and 17 supportive housing sites run by this charitable agency. Their mission statement is to "*develop and provide affordable, stable housing and support services to break the cycle of homelessness for people with the fewest housing options*", particularly for a growing homeless **<a class="one" href="https://homefulltoronto.ca/">senior</a>** (>50 yrs) population that make up a large part of their ~2,300 clients. However, despite the continuing rise in the number of homeless persons, and recent infusion of Federal dollars (**<a class="one" href="https://www.cbc.ca/news/canada/toronto/asylum-seeker-shelter-funding-toronto-1.7102849">$162 million</a>**) into its shelter system, **Homes First** has unilaterally decided to transition the **Delta** site to a refugee only shelter (i.e. no consultations with residents). Apparently, in accordance with the wishes of local Ward 22 councillor Nick Mantas, the shelter is actively trying to move or evict people from the safety of the shelter. Many have already faced punitive "*service restrictions*" without any appeals process. The current *ad hoc* appeals process typically results in the clients eviction at the end of the restriction period, which usually takes a week or more. It is important to note that during the time it takes to resolve the current appeals process the client is removed from the shelter and forced to find accommodations elsewhere (i.e. homeless). The recent rise in the number of **unavailable** rooms (**Fig. 13**) is likely an indicator of future evictions for many non-refugee residents at the Delta shelter. Note that the number of **unavailable rooms** (i.e. **UNAVAILABLE ROOMS** = **ROOMS CAPACITY FUNDING** - **ROOM OCCUPIED**) are rooms that the service provider still has designated funding to maintain (**Table 3**). In light of the recent increase in funding to the Shelter System one would expect that there should be safe shelter for all homeless people within the **GTA**. 
+**Figure 12 & 13. Homes First's Delta Hotel Shelter.** The two graphs above show the number of rooms at the Delta Hotel Shelter that are either occupied (**Figure 12**) or unoccupied (**Figure 13**) by a homeless person. The marginal histogram in **Figure 12** shows that the plotted occupancy values fall within 2 distinct populations. These two populations of data points begin to emerge on July 22<sup>nd</sup> 2022 (i.e. July 21<sup>st</sup> = 316 residents, July 22<sup>nd</sup> = 334 residents). The reasons for this are currently unknown, but may reflect <u>increased</u> funding to the Shelter System. Although the number of occupants have been steadily decreasing between Feb 5<sup>th</sup> to April 4<sup>th</sup>, the recent influx of refugees has rapidly corrected these falling numbers. These rapid changes in the number of people sheltered at the Delta Hotel over the past 2 months is also reflected in the number of unavailable rooms at the shelter (**Figure 13**). The fitted **Loess** (**LO**cal regr**ESS**ion) curve is fairly <u>well defined</u> (i.e. residuals are fairly constant over the chosen range of x values, with the exception of the last three data points which have relatively high negative residual values). Nevertheless, it is important to note that the overnight **Delta Hotel Shelter** (Program ID 16011) supervised by **Homes First** is, according to **DSOSO** records, a <u>designated</u> mixed adult (Sector) shelter that falls under the emergency COVID-19 Program. So it is by definition <u>not</u> a refugee-only shelter space. According to **Homes First**, which runs many other additional shelter and supportive housing sites, their mission is to "*develop and provide affordable, stable housing and support services to break the cycle of homelessness for people with the fewest housing options*". However, despite the continuing rise in the number of homeless persons in Toronto (**Fig. 1, 2**), and the recent influx of Federal dollars (**<a class="one" href="https://www.cbc.ca/news/canada/toronto/asylum-seeker-shelter-funding-toronto-1.7102849">$162 million</a>**) to support the Toronto shelter system, **Homes First** has unilaterally decided to transition the **Delta** Hotel Shelter to a refugee only site (i.e. no consultations with residents). Apparently, in accordance with the wishes of local Ward 22 councillor Nick Mantas, the shelter is actively trying to move or evict people from the safety of the shelter. Many have already faced punitive "*service restrictions*" without any appeals process. Recent updates to the system has generated a new "*faux*" appeals process that typically results in the clients eviction at the end of the restriction period. It is important to note that during the time it takes to resolve the appeal process the client is removed from the shelter and forced to find accommodations on their own (i.e. homeless). Homes First's blatant exclusion of Delta residents from any decision making process that directly affects their immediate and future well being is imprudent and overtly punitive in nature. Many residents are afraid that they will be forced to move back onto the streets, or to some unsafe open congregate shelter space. The lack of transparency about decisions that directly affect the lives of Delta residents has only heightened resident's fears, anxiety and distrust of Homes First. The current drive to restrict shelter services to refugees at the expense of non-refugees is perplexing given the recent influx of Federal funding into the Toronto Shelter system. Available resources, if used wisely, could safely house homeless people within the **GTA** without resorting to an outdated, expensive and dehumanizing emergency shelter system (**Note:** number of **UNAVAILABLE ROOMS** = **ROOMS CAPACITY FUNDING** - **ROOM OCCUPIED**, **Table 3**). 
 
+<br>
 <br>
 
 # REFERENCES:  
